buona parte della seconda finita

--- a/chimica/C2/latex/dati_e_risultati.tex
+++ b/chimica/C2/latex/dati_e_risultati.tex
@@ -1,1 +1,13 @@
 \section*{Dati e risultati}
+
+\begin{SCfigure}[0.55][t]
+    \includegraphics[scale=0.5]{concentrazioni.pdf}
+    \caption{}
+    \label{fig:conc}
+\end{SCfigure}
+
+\begin{SCfigure}[0.55][t]
+    \includegraphics[scale=0.5]{retta.pdf}
+    \caption{}
+    \label{fig:a_vs_c}
+\end{SCfigure}
