--- a/chimica/C2/latex/obbiettivo.tex
+++ b/chimica/C2/latex/obbiettivo.tex
@@ -1,4 +1,9 @@
 \section*{Scopo}
 
-Chicken chicken chicken chicken chicken chicken chicken chicken chicken chicken chicken chicken chicken chicken chicken chicken chicken chicken chicken chicken chicken. Chicken chicken chicken chicken chicken chicken chicken chicken chicken, chicken chicken chicken chicken chicken chicken chicken chicken chicken chicken chicken chicken chicken chicken chicken chicken chicken (chicken chicken chicken chicken chicken \ce{Ck^+} con \ce{eN^+}),
-chicken chicken chicken chicken chicken. chicken chicken chicken, chicken chicken chicken, chicken chicken chicken chicken chicken chicken chicken chicken chicken chicken chicken chicken.
+Come nella esperienza precedente, anche in questo caso lo scopo è titolare una
+soluzione la cui concentrazione è incognita. Stavolta la titolazione è stata
+eseguita mediante misure fotospettrometriche, ovvero misurando la quantità di
+luce trasmessa (o assorbita) da varie soluzioni di concentrazione diversa.
+In questo modo, estrapolando l'andamento dell'assorbimento in funzione della
+concentrazione è possibile, conoscendo l'assorbimento della soluzione incognita,
+ricavarne la concentrazione.
