--- a/chimica/C2/latex/relazione.tex
+++ b/chimica/C2/latex/relazione.tex
@@ -26,7 +26,7 @@
 
 \begin{center}
 
-        {\huge Chicken chicken: chicken chicken}
+        {\huge Titolazione mediante misure fotospettrometriche}
     \vspace{0.1cm}
 
       	{Francesco Pasa, Andrea Miani, Davide Bazzanella - Gruppo 8 Mercoledì} \\
