--- a/chimica/C1/latex/dati_e_risultati.tex
+++ b/chimica/C1/latex/dati_e_risultati.tex
@@ -19,7 +19,7 @@ Infine abbiamo eseguito una nuova regressione con i valori trasferiti delle ince
     \label{fig:meas}
 \end{SCfigure}
 
-É eseguito il test del chi quadro per verificare che la retta di fit fosse soddisfacente e che le incertezze fossero corrette.
+\`E eseguito il test del chi quadro per verificare che la retta di fit fosse soddisfacente e che le incertezze fossero corrette.
 Per la prima retta abbiamo usato i primi 13 dati; poichè una retta ha due parametri (pendenza ed intercetta),
 il numero di gradi di libertà è 13 - 2 = 11. Per la retta che riguarda la salita abbiamo 38 dati e quindi la distribuzione del $\chi^2$ ha 36 gradi di libertà.
 I valori attesi\footnote{L'incertezza sul valore atteso della distribuzione del chi quadro vale $\sqrt{\text{numero gradi di libertà}}$.} del $\chi^2$ erano
