--- a/chimica/C1/latex/materiale.tex
+++ b/chimica/C1/latex/materiale.tex
@@ -35,7 +35,7 @@ a passi di 0.5 ml. In questo modo avviene la seguente reazione di precipitazione
 La parte interessante della reazione è che l'argento cloruro (\ce{AgCl}) precipita. Di conseguenza gli ioni \ce{Ag^+}
 vengono rimossi dalla soluzione e non contribuiscono più alla sua conducibilità elettrica.
 Poiché gli ioni \ce{Na^+} conducono meno dei \ce{Ag^+} la conducibilità diminuisce man mano che viene aggiunto NaCl,
-finchè l'argento non è completamente precipitato. A questo punto, continuando ad aggiungere NaCl, si aggiungendo nuovi ioni \ce{Na^+} che fanno salire la conducibilità,
+finchè l'argento non è completamente precipitato. A questo punto, continuando a versare NaCl nella soluzione, si aggiungono nuovi ioni \ce{Na^+} che fanno salire la conducibilità,
 per cui il trend si inverte.
 
 Conoscendo il volume della soluzione titolante necessaria per arrivare al punto di inversione, e quindi il numero di moli
