--- a/chimica/C2/latex/materiale.tex
+++ b/chimica/C2/latex/materiale.tex
@@ -1,14 +1,13 @@
 \section*{Materiale}
 
-BUZZ NON HA NIENTE DI MEGLIO DA FARE CHE SCRIVERE CHICKEN OVUNQUE... LAVORA, IGNOBILE!!! :-P
-
 \begin{itemize}
         \setlength{\parskip}{-1pt}
-        \item{Vetreria varia: buretta, beker, matracci da 10 ml e 25 ml,
+        \item{Vetreria: buretta, beker, matracci da 10 ml e 25 ml,
             contenitori per le varie soluzioni, cuvette per il fotospettrometro,
             pipette Pasteur;}
         \item{Solfato di rame (\ce{CuSO4}), acqua distillata e soluzione incognita;}
         \item{Fotospettrometro;}
+        \item{Francesco Pasa, Andrea Miani, Davide Bazzanella, uno dei quali camice-munito.}
 \end{itemize}
 
 \section*{Procedura e incertezze}
@@ -51,7 +50,7 @@ usare soluzioni poco concentrate affinche la titolazione risulti corretta.
 A questo punto abbiamo misurato la curva di assorbimento della soluzione con il
 fotospettrometro, confrontandolo con quello dell'acqua distillata. Questo passo
 serve per ottenere la lunghezza d'onda in cui si trova il massimo di assorbimento,
-che è risultato essere a $\lambda\ped{max} =$ 825 nm. Inoltre è necessario per
+che è risultato essere a $\lambda\ped{max} =$ 825 nm, ed è inoltre necessario per
 assicurarsi che la concentrazione resti nell'intervallo di validità della Lambert-Beer.
 
 Poichè la soluzione figlia 0.16 M aveva un'assorbanza $A \simeq 2$ a $\lambda\ped{max}$,
