--- a/chimica/C2/latex/conclusione.tex
+++ b/chimica/C2/latex/conclusione.tex
@@ -1,1 +1,3 @@
 \section*{Conclusione}
+
+L'esperienza è stata portata a termine positivamente. Abbiamo utilizzato lo spettrocromatografo per analizzare l'assorbanza di cinque soluzioni di cui una incognita e abbiamo determinato la titolazione di quest'ultima grazie ad un'interpolazione sui dati delle altre quattro soluzioni.
