--- a/chimica/C2/latex/materiale.tex
+++ b/chimica/C2/latex/materiale.tex
@@ -25,6 +25,7 @@ L'assorbanza $A$ è un numero puro ed è definita come:
 
 \begin{equation}
     A = - \log_{10}{\frac{I}{I_0}}
+    \label{eq:ass}
 \end{equation}
 %
 dove $I_0$ è l'intensità della luce trasmessa dall'acqua, mentre $I$ quella trasmessa
@@ -34,6 +35,7 @@ In termini di assorbanza la legge di Lamber-Beer assume la forma:
 
 \begin{equation}
     A = \epsilon \ell c = \alpha c
+    \label{eq:lambeer}
 \end{equation}
 %
 dove $\epsilon$ è l'assorbanza molare, $\ell$ la lunghezza della sezione di soluzione
@@ -50,7 +52,9 @@ usare soluzioni poco concentrate affinche la titolazione risulti corretta.
 A questo punto abbiamo misurato la curva di assorbimento della soluzione con il
 fotospettrometro, confrontandolo con quello dell'acqua distillata. Questo passo
 serve per ottenere la lunghezza d'onda in cui si trova il massimo di assorbimento,
-che è risultato essere a $\lambda\ped{max} =$ 825 nm, ed è inoltre necessario per
+che è risultato essere a $\lambda\ped{max} =$ 825 nm\footnote{In realtà la lunghezza
+d'onda del massimo di assorbimento varia di qualche nanometro con la concentrazione,
+tuttavia noi abbiamo mantenuto fisso $\lambda\ped{max} =$ 825 nm}, ed è inoltre necessario per
 assicurarsi che la concentrazione resti nell'intervallo di validità della Lambert-Beer.
 
 Poichè la soluzione figlia 0.16 M aveva un'assorbanza $A \simeq 2$ a $\lambda\ped{max}$,
@@ -65,5 +69,5 @@ da 10 ml, le cui concentrazioni valgono $0.016 \pm 0.001$ M, $0.032 \pm 0.001$ M
 $0.048 \pm 0.002$ M e $0.064 \pm 0.002$ M.
 
 Abbiamo quindi misurato le curve di assorbimento delle quattro soluzioni e della
-soluzione incognita con il fotospettrometro.
-
+soluzione incognita con il fotospettrometro. L'assorbanza è misurata relativamente a quella
+dell'acqua distillata.
