git vuole un messaggio nel commit...

--- a/chimica/C2/latex/conclusione.tex
+++ b/chimica/C2/latex/conclusione.tex
@@ -1,3 +1,4 @@
 \section*{Conclusione}
 
 L'esperienza è stata portata a termine positivamente. Abbiamo utilizzato il fotospettrometro per analizzare l'assorbanza di cinque soluzioni di cui una incognita e abbiamo determinato la titolazione di quest'ultima grazie ad un'interpolazione sui dati delle altre quattro soluzioni.
+Il valore ottenuto per la concentrazione della soluzione incognita è in linea con le aspettative date dalla legge sperimentale e ci ha permesso di concludere l'esperienza in modo soddisfacente.
