--- a/chimica/C2/latex/dati_e_risultati.tex
+++ b/chimica/C2/latex/dati_e_risultati.tex
@@ -5,7 +5,7 @@
     \caption{Nel grafico sono rappresentate le curve di assorbimento in funzione della lunghezza d'onda delle quattro soluzioni note.
         \`E stata inoltre evidenziata tramite una linea verticale la lunghezza d'onda di massima assorbanza $\lambda\ped{max} = \SI{825}{\nano\meter}$.
         Queste curve sono interessanti poichè spiegano il colore azzurro intenso di una soluzione di \ce{CuSO4}. Il massimo di assorbimento
-        nel visibile è ad altre lunghezze d'onda, ovvero nel rosso e nell'infrarosso; la luce di colore blu invece, passa indisturbata, per cui la soluzione appare di
+        nel visibile è ad alte lunghezze d'onda, ovvero nel rosso e nell'infrarosso; la luce di colore blu invece, passa indisturbata, per cui la soluzione appare di
         colore blu. La barra colorata in basso indica approssimativamente i colori corrispondenti alle lunghezze d'onda del grafico soprastante.}
     \label{fig:conc}
 \end{SCfigure}
@@ -16,7 +16,7 @@ e $\SI{0.048}{\mole\per\litre}$ hanno assorbanza massima a $\lambda\ped{max}$ re
 La soluzione titolata $\SI{0.064}{\mole\per\litre}$ invece è risultata avere assorbanza massima, sempre in $\lambda\ped{max}$,
 di $0.73$. Un valore particolarmente distante dal preventivato $0.8$, ma comunque all'interno dell'intervallo di validita della Lambert-Beer.
 
-Le curve di assorbimento mostrate nella figura sono interessanti poichè offrono una precisa visione d'insieme dell'assorbimento
+Le curve di assorbimento mostrate in Figura \ref{fig:conc} sono interessanti poichè offrono una precisa visione d'insieme dell'assorbimento
 della soluzione, sia al variare della lunghezza d'onda che della concentrazione. Inoltre si comprende come mai una soluzione di
 solfato di rame sia azzurra: la luce rossa è assorbita, mentre quella blu attraversa la soluzione indisturbata.
 
@@ -51,7 +51,7 @@ Ora, avendo misurato l'assorbanza della soluzione a concentrazione incognita a 8
 \begin{SCfigure}[0.55][t]
     \includegraphics[scale=0.55]{retta.pdf}
     \caption{Il grafico in figura mostra l'assorbanza a $\lambda\ped{max} = \SI{825}{nm}$ in funzione della concentrazione
-        per le quattro soluzione preparate. Sono riportati sia gli errori sulla concentrazione, che le incertezze sull'assorbanza
+        per le quattro soluzioni preparate. Sono riportati sia gli errori sulla concentrazione, che le incertezze sull'assorbanza
         stimate dalla correzione delle incertezze. La retta di fit in verde 
         indica l'andamento previsto dalla legge di Lambert-Beer e ci permette di calcolare $\alpha$. In grigio è riportato
         il valore di assorbanza della soluzione incognita, dall'intersezione con la retta di fit possiamo dire che la concentrazione
