--- a/chimica/C2/latex/obbiettivo.tex
+++ b/chimica/C2/latex/obbiettivo.tex
@@ -1,7 +1,7 @@
 \section*{Scopo}
 
-Come nella esperienza precedente, anche in questo caso lo scopo è titolare una
-soluzione la cui concentrazione è incognita. Stavolta la titolazione è stata
+Come nell'esperienza precedente, anche in questo caso lo scopo è titolare una
+soluzione la cui concentrazione è incognita. In questo caso, la titolazione è stata
 eseguita mediante misure fotospettrometriche, ovvero misurando la quantità di
 luce trasmessa (o assorbita) da varie soluzioni di concentrazione diversa.
 In questo modo, estrapolando l'andamento dell'assorbimento in funzione della
