--- a/chimica/C1/latex/materiale.tex
+++ b/chimica/C1/latex/materiale.tex
@@ -34,7 +34,7 @@ a passi di 0.5 ml. In questo modo avviene la seguente reazione di precipitazione
 
 La parte interessante della reazione è che l'argento cloruro (\ce{AgCl}) precipita. Di conseguenza gli ioni \ce{Ag^+}
 vengono rimossi dalla soluzione e non contribuiscono più alla sua conducibilità elettrica.
-Poiché gli ioni \ce{Na^+} conducono meno dei \ce{Ag^+} la conducibilità diminuisce man mano che viene aggiunto NaCl,
+Poiché gli ioni \ce{Na^+} conducono meno degli \ce{Ag^+} la conducibilità diminuisce man mano che viene aggiunto NaCl,
 finchè l'argento non è completamente precipitato. A questo punto, continuando a versare NaCl nella soluzione, si aggiungono nuovi ioni \ce{Na^+} che fanno salire la conducibilità,
 per cui il trend si inverte.
 
@@ -45,4 +45,4 @@ L'incertezza standard sul volume della soluzione titolanda (nel becker) è stata
 buretta l'incertezza standard è di 0.03 ml. Per ottenere l'errore sul volume versato, che è la differenza tra due volumi,
 occore comporre le incertezze. L'incertezza sul volume versato è quindi di 0.04 ml.
 
-L'incertezza sui valori di conduttanza è sempre l'errore tipo, che per il nostro conduttimetro vale \SI{0.003}{\micro\siemens}.
+L'incertezza sui valori di conduttanza è sempre l'errore tipo, che per il nostro conduttimetro vale \SI{0.003}{\milli\siemens}.
