--- a/chimica/C1/latex/obbiettivo.tex
+++ b/chimica/C1/latex/obbiettivo.tex
@@ -1,7 +1,7 @@
 \section*{Scopo}
 
-L'obbiettivo di questa esperienza di laboratorio è quello di determinare la concentrazione
-di una soluzione mediante misure di conduttimetria. Per fare ciò si sfutta una reazione di
+L'obiettivo di questa esperienza di laboratorio è quello di determinare la concentrazione
+di una soluzione mediante misure di conduttimetria. Per fare ciò si sfrutta una reazione di
 precipitazione, mediante la quale è possibile sostituire gli elettroliti della soluzione
 a concentrazione incognita con altri ioni (nel nostro caso abbiamo sostituito \ce{Ag^+} con \ce{Na^+}),
 che hanno una conducibilità diversa. In questo modo, misurando la conducibilità, si può
