--- a/chimica/C1/latex/conclusione.tex
+++ b/chimica/C1/latex/conclusione.tex
@@ -2,7 +2,7 @@
 
 Come già sottolineato in precedenza, abbiamo avuto dei problemi con la seconda regressione lineare.
 Infatti l'andamento della conducibilità che abbiamo registrato non è del tutto lineare. La legge che descrive
-la conducibilità in funzione della concentrazione, la legge di Kohlrausch, non è lineare ma ha un andamento di una radice quadrata.
+la conducibilità in funzione della concentrazione, la legge di Kohlrausch, non è lineare ma ha l'andamento di una radice quadrata.
 Occorre evidenziare che noi abbiamo variato la concentrazione in modo non lineare, poichè abbiamo aggiunto volume di
 soluzione a concentrazione costante ad un altra soluzione. Questo fatto può spiegare come mai l'andamento è quasi lineare.
 
@@ -13,5 +13,5 @@ sono stati scartati tutti i dati al di sopra di 15 ml ed è stato eseguita una r
 era di circa 0.09 mS, un valore molto più accettabile dei 0.3 mS del caso con tutti i dati. Con questo metodo la concentrazione incognita
 ha assunto il valore di 0.091 M. 
 
-Concludendo, possiamo affermare che il risultato ottenuto è sicuramente sottostimato, soprattutto l'incertezza. Possiamo però dire con
+Concludendo, possiamo affermare che il risultato ottenuto e in particolar modo la sua incertezza sono sottostimati. Possiamo però asserire con
 sufficiente sicurezza che la concentrazione incognita è compresa tra 0.085 M e 0.095 M. 
