--- a/chimica/C3/latex/relazione.tex
+++ b/chimica/C3/latex/relazione.tex
@@ -17,6 +17,7 @@
 \usepackage{titlesec}
 \usepackage{subcaption}
 \usepackage[version=3]{mhchem}
+\usepackage{color}
 
 \titlespacing\section{0pt}{10pt plus 4pt minus 4pt}{8pt plus 2pt minus 4pt}
 \titlespacing\subsection{0pt}{10pt plus 4pt minus 4pt}{8pt plus 2pt minus 4pt}
