--- a/chimica/C3/latex/materiale.tex
+++ b/chimica/C3/latex/materiale.tex
@@ -18,7 +18,8 @@ Per prima cosa abbiamo calibrato il pHmetro con tre soluzioni tampone,
 seguendo le istruzioni riportate nel manuale dello strumento.
 
 Il principio che ci permette di titolare la soluzione è il seguente: l'acido acetico, essendo un acido debole,
-si dissocia poco in acqua (circa il 4 \% \textcolor{red}{[controllare il valore 4 \%]} a temperatura 25$^\circ$C),
+si dissocia poco in acqua (circa il 4 \% \textcolor{red}{[controllare il valore 4 \% nella sezione successiva
+c'è anche il calcolo]} a temperatura 25$^\circ$C),
 per cui si trova quasi completamente nella forma \ce{CH3COOH}.
 L'\ce{NaOH} è invece una base forte e quindi, avendo una costante $K\ped{B}$ molto alta,
 si dissocia completamente. Aggiungendo l'idrossido di sodio alla soluzione di acido acetico,
@@ -37,7 +38,8 @@ Poichè la \eqref{eq:reaz} è la reazione
 inversa della reazione dell'acetato con l'acqua, si ha che $K\ped{eq} = 1/K\ped{B} \simeq 10^9$.
 
 Poichè $K\ped{eq}$ è molto grande, la \eqref{eq:reaz} è una reazione spostata verso i prodotti. Questo significa la reazione
-è quasi stechiometrica; praticamente per ogni \ce{NaOH} aggiunto una molecola di acido acetico si dissocia producendo acetato.
+è quasi stechiometrica; praticamente per ogni \ce{NaOH} aggiunto una molecola di acido acetico si dissocia producendo acetato
+(ecco perchè abbiamo messo solo la freccia verso destra).
 
 Si può sfruttare questo fatto nel seguente modo: si aggiunge \ce{NaOH} alla soluzione titolanda misurando allo
 stesso tempo il pH. Graficando il pH in funzione della quantità di idrossido di sodio aggiunto si individua
@@ -45,14 +47,15 @@ il punto equivalente, ovvero il punto in cui $n(\ce{CH3COOH})_i = n(\ce{NaOH})$ 
 facendo leva sul fatto che la reazione si può considerare stechiometrica. Il punto di equivalenza è
 il flesso della curva di titolazione. Da questo punto in poi, tutto l'acido acetico è diventato acetato.
 
-Nel nostro caso, avevamo 100 ml di soluzione a concentrazione incognita di acido acetico. Abbiamo
-trascurato l'incertezza sul volume della soluzione di partenza. Abbiamo versato la soluzione in un
+Nel nostro caso, avevamo $V_0 = 100$ ml di soluzione a concentrazione incognita di acido acetico. Abbiamo
+considerato un errore tipo di risoluzione di 0.3 ml sul volume della soluzione di partenza. Abbiamo versato la soluzione in un
 beker, versandoci poi anche il residuo di lavaggio del matraccio dove era contenuta. In questo modo abbiamo
 trasferito quanto più \ce{CH3COOH} possibile nel beker. Abbiamo quindi aggiunto un paio di gocce
 di soluzione di fenolftaleina, che è un indicatore che cambia colore quando si supera il punto di equivalenza
 in modo da avere un riscontro visivo di quello che succede nel beker.
 
-Mediante la buretta si è poi versato nel beker la soluzione 0.1 M (anche questa senza incertezza) di \ce{NaOH}, inizialmente a
+Mediante la buretta si è poi versato nel beker la soluzione 0.1 M (valore di cui abbiamo trascurato incertezza)
+di \ce{NaOH}, inizialmente a
 passi di 0.5 ml, poi, in prossimita del punto equivalente, goccia per goccia. Abbiamo annotato per ogni passo, valore
 del pH, misurato col pHmetro, e volume totale di soluzione di idrossido di sodio versato. L'incertezza sul pH è 0.003
 (incertezza tipo di risoluzione), mentre quella sul volume versato, che è la differenza tra due letture di volume,
