--- a/chimica/C3/latex/dati_e_risultati.tex
+++ b/chimica/C3/latex/dati_e_risultati.tex
@@ -6,8 +6,16 @@ essere molto vicino al flesso (si veda grafico della derivata), si è deciso di 
 punto equivalente.
 
 \begin{SCfigure}
-    \includegraphics[scale=0.6]{curva.pdf}
-    \caption{Le caratteristiche fondamentali della curva di titolazione sono}
+    \includegraphics[scale=0.55]{curva.pdf}
+    \caption{Le curva di titolazione ottenuta è tipica di un acido debole. Le caratteristiche peculiari sono il punto di equivalenza,
+        ovvero il punto in cui il numero di moli di acido e quelle di idrossido sono uguali. Come si vede chiaramente la
+        pendenza della curva è massima attorno al punto di equivalenza, fatto che ci permette di individuarlo facilmente grazie al grafico
+        della deriva della curva.
+        Un altra caratteristica imporante è la zona attorno al punto di semiequivalenza. Questa parte della curva è la
+        regione di buffer, dove la soluzione si comporta da tampone, ovvero mantiene il pH circa costante. Infatti la derivata della
+        curva è molto piccola. Questo fatto si può sfruttare se è necessario mantenere il pH circa costante, per esempio per le soluzioni
+        di taratura del pHmetro. Infine è riportata la curva teorica ricavata dall'equazione \eqref{eq:curv}. Le incertezze non sono riportate
+        in quanto non visibili.}
     \label{fig:curva}
 \end{SCfigure}
 
@@ -102,6 +110,7 @@ dal quale si può ricavare la seguente equazione
 
 \begin{equation}
     \frac{CV}{C_0V_0} = \frac{K\ped{A}}{K\ped{A} + \ce{[H3O+]}} + \frac{V + V_0}{C_0V_0} \left(\frac{K_w}{\ce{[H3O+]}} - \ce{[H3O+]} \right)
+    \label{eq:curv}
 \end{equation}
 %
 che fornisce la formula della curva di titolazione. In particolare, poichè è difficile ricavare \ce{[H3O+]}, essendo
