--- a/chimica/C3/latex/conclusione.tex
+++ b/chimica/C3/latex/conclusione.tex
@@ -2,7 +2,7 @@
 
 L'esperienza è stata portata a termine positivamente.
 Abbiamo utilizzato il pHmetro per analizzare il pH della soluzione a concentrazione incognita di \ce{CH3COOH} in funzione dell'aggiunta di una soluzione basica 0.1 M di \ce{NaOH} e in tal modo determinare la titolazione di quella incognita.
-Il valore ottenuto per la concentrazione della soluzione incognita è di $\bigotimes$ ed è in linea con le aspettative in quanto è contenuto nel range tale per cui $\gamma_{a} \simeq 1$.
+Il valore ottenuto per la concentrazione della soluzione incognita è di $10.15 \pm 0.04$ \si{\milli\mol\per\litre} ed è in linea con le aspettative in quanto è contenuto nel range tale per cui $\gamma_{a} \simeq 1$.
 
 \section*{Bonus: pH della Pepsi™}
 
